--- a/004_lesson/styles.css
+++ b/004_lesson/styles.css
@@ -3,6 +3,14 @@ a {
     text-decoration: none;
 
 }
+
+a:visited {
+    color: aqua;
+}
+
 a:hover {
     color: red;
+}
+a:active {
+    color: green;
 }
